--- a/index.html
+++ b/index.html
@@ -1,95 +1,81 @@
-
-<!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="plotly-latest.min.js"></script>
-    <script type="text/javascript" src="canvasjs.min.js"></script>
-    <script type="text/javascript" src="jquery-3.4.1.js"></script>
-</head>
-<body>
-<section class="login-block">
-    <div class="container">
-	<div class="row">
-		<div class="col-md-5 login-sec">
-        <h2 class="register-heading">DES Algorithm</h2>
-        <div class="form-group">
-                <label for="Rounds"> Rounds</label>
-                <select name="Rounds" id="Select">
-                    <option value="16">16 Rounds</option>
-                    <option value="32">32 Rounds</option>
-                    <option value="8">8 Rounds</option>
-                    <option value="1">1 Round</option>
-                </select> 
-                <label for="Block length"> Block Length</label>
-                <select name="Block" id="Block">
-                    <option value="128">128 Bit Plaintext</option>
-                    <option value="64">64 Bit Plaintext</option>
-                    <option value="32">32 Bit Plaintext</option>
-                </select>
-        </div>          
-   
-    <div class="form-group">
-        <textarea class="form-control" id="p_t1" placeholder="Plaintext"></textarea>
-    </div>
-    <div class="form-group">
-        <textarea class="form-control" id="key1" placeholder="Key"></textarea>
-    </div>
-    <div>
-        <input type="submit" class="btnRegister" id="encrypt1" value="Encrypt">
-    </div>
-    <div class="form-group">
-        <textarea class="form-control" id="c_t1" placeholder="Ciphertext"></textarea>
-    </div>
-    <div>
-        <input type="submit" class="btnRegister" id="decrypt1" value="Decrypt">
-    </div>
-</div>
 
-
-	<div class="col-md-7 banner-sec">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  </ol>
-            <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img class="d-block img-fluid" src="Images/pic1.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">	</div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="Images/pic2.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block"></div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="Images/pic3.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">	</div>
-  </div>
-</div>	   
-</div>
-</div>
-</div>
-</div>
-<div id="myDiv" style="height: 300px; width: 100%"></div>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script type="text/javascript" src="plotly-latest.min.js"></script>
+        <script type="text/javascript" src="canvasjs.min.js"></script>
+        <script type="text/javascript" src="jquery-3.4.1.js"></script>
+    </head>
+    <body>
+        <div class="container-fluid register">
+            <div class="row">
+                        <div class="col-md-3 register-left">
+                            <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+                            <h1>WELCOME</h1>
+                            <p>Blowfish Encryption</p>
+                        </div>
+                        <div class="col-md-9 register-right">
+                            <div class="tab-content" id="myTabContent">
+                                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                    <h3 class="register-heading">BLOWFISH ENCRYPTION IN CBC MODE</h3>
+                                    <div class="form-group">
+                                        <label for="Rounds"> Rounds</label>
+                                        <select name="Rounds" id="Select">
+                                            <option value="16">16 Rounds</option>
+                                            <option value="32">32 Rounds</option>
+                                            <option value="8">8 Rounds</option>
+                                            <option value="1">1 Round</option>
+                                        </select>
+                                        <label for="Block length"> Block Length</label>
+                                        <select name="Block" id="Block">
+                                            <option value="128">128 Bit Plaintext</option>
+                                            <option value="64">64 Bit Plaintext</option>
+                                            <option value="32">32 Bit Plaintext</option>
+                                        </select>
+                                    </div>
+                                    <div class="row register-form">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <textarea class="form-control" id="p_t1" placeholder="Plaintext *"></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <textarea class="form-control" id="key1" placeholder="Key *"></textarea>
+                                            </div>
+                                            <input type="submit" class="btnRegister" id="encrypt1" value="Encrypt"/>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <textarea class="form-control" id="c_t1" placeholder="Ciphertext *"></textarea>
+                                            </div>
+                                            <input type="submit" class="btnRegister" id="decrypt1" value="Decrypt"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+        </div>
+        <div id="myDiv" style="height: 300px; width: 100%"></div>
         <hr>
-<div id="chartcontainer" style="height: 300px; width: 100%"></div>
-</section>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src=translate.js></script>
+        <div id="chartcontainer" style="height: 300px; width: 100%"></div>
+        <div class="col-md-12 login-sec">
+            <h2 class="register-heading">Round keys (to demonstrate weak keys)</h2>
+            <div class="form-group">
+                <textarea rows=8 class="form-control" id="rnd_keys" placeholder="Round keys in Hexadecimal format"></textarea>
+            </div> 
+            <div class="form-group">
+                <textarea rows=8 class="form-control" id="rnd_keys_bin" placeholder="Round keys in Binary format"></textarea>
+            </div>      
+        </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="translate.js"></script>
 </body>
+
 </html>
